--- a/views/account/manage.ejs
+++ b/views/account/manage.ejs
@@ -1,4 +1,10 @@
-<h2>Welcome <%= user.firstname %></h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Account</title>
+</head>
+<body>
+    <h2>Welcome <%= user.firstname %></h2>
 
 <% if (user.account_type === 'Admin' || user.account_type === 'Employee') { %>
   <h3>Inventory Management</h3>
@@ -10,3 +16,10 @@
 <% if (message) { %>
   <p style="color:green;"><%= message %></p>
 <% } %>
+
+  <h1>Account Details</h1>
+  <p>First Name: <%= account.firstname %></p>
+  <p>Last Name: <%= account.lastname %></p>
+  <p>Email: <%= account.email %></p>
+</body>
+</html>
